<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.indstudy.nicholas.thegarage.HttpClasses.AddVideoGameFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <AutoCompleteTextView android:id="@+id/add_video_game_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_title"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <AutoCompleteTextView android:id="@+id/add_video_game_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_developer"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Spinner android:id="@+id/add_video_game_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <CheckBox android:id="@+id/add_video_game_played_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_played"/>

        <CheckBox android:id="@+id/add_video_game_playing_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_playing" />

        <CheckBox android:id="@+id/add_video_game_completed_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_completed" />

    </LinearLayout>

</LinearLayout>
