<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_below="@+id/add_item_spinner"
    tools:context="com.indstudy.nicholas.thegarage.HttpClasses.AddBookFragment"
    android:orientation="vertical" >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <AutoCompleteTextView android:id="@+id/add_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_title"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <AutoCompleteTextView android:id="@+id/add_book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_author"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView android:id="@+id/add_book_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_publisher"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView android:id="@+id/add_book_isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_isbn"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Spinner android:id="@+id/add_book_format_spinner"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:padding="15dp" />

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <CheckBox android:id="@+id/add_book_read_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:padding="15dp"
            android:text="@string/prompt_is_read"/>
        <CheckBox android:id="@+id/add_book_reading_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:padding="15dp"
            android:text="@string/prompt_is_reading"/>
    </LinearLayout>

</LinearLayout>
