<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.indstudy.nicholas.thegarage.HttpClasses.AddMusicFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/add_music_album_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_album_title"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/add_music_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_artist"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/add_music_format_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" />

    <CheckBox
        android:id="@+id/add_music_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/prompt_is_listening" />

</LinearLayout>