<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HttpClasses.AddTabletopFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <AutoCompleteTextView android:id="@+id/add_table_top_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_title"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" android:weightSum="2"
        android:baselineAligned="false">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <AutoCompleteTextView android:id="@+id/add_table_top_min"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_minimum"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <AutoCompleteTextView android:id="@+id/add_table_top_max"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_maximum"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Spinner android:id="@+id/add_table_top_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp" />

</LinearLayout>
